--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,7 @@
       <link rel="stylesheet" type="text/css" href="/css/styles.css">
       <!-- <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css"> -->
       <link rel="shortcut icon" type="image" href="/favicon.ico"/>
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
       <link href="https://fishingbakersfield.com" hreflang="en-us" rel="alternate" title="fishingBakersfield" type="text/html"/>
       <script src="/js/menu.js"></script>
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -33,9 +34,9 @@
         </div>
         <div id="navbarExampleTransparentExample" class="navbar-menu">
           <div class="navbar-start">
-            <a class="navbar-item" href="/"><img src="/icons/home-white.svg" class="svg-icon-small" />Home</a>
-            <a class="navbar-item" href="/catches/1"><img src="/icons/feed-white.svg" class="svg-icon-small" />Feed</a>
-            <a class="navbar-item" href="/resources"><img src="/icons/link-white.svg" class="svg-icon-small" />Links</a>
+            <a class="navbar-item" href="/"><i class="fas fa-home">&nbsp;</i>Feed</a>
+            <a class="navbar-item" href="/locations"><i class="fas fa-map-marker">&nbsp;</i>Locations</a>
+            <a class="navbar-item" href="/resources"><i class="fas fa-exchange-alt">&nbsp;</i>Links</a>
              </div>         <div class="navbar-end">
                <% if(currentUser){ %>
                  <a class="navbar-item" href="/dashboard"><img src="/icons/user-circle-white.svg" class="svg-icon-small"> Hello, <%= currentUser.username %>!</a>
