--- a/views/terms.ejs
+++ b/views/terms.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Terms & Conditions - fishingBakersfield</title>
+    <title>Terms & Conditions</title>
 <% include partials/header %>
 <br>
 <% include partials/message %>
 <div class="container">
-  <a class="button" href="/register"><i class="fa fa-arrow-left">&nbsp;</i>Register</a>
+  <a class="button" href="/register"><img src="/icons/arrow-left.svg" class="svg-icon-small">Register</a>
   <br>
   <br>
             <article class="message is-info">
