--- a/views/truxtundepth.ejs
+++ b/views/truxtundepth.ejs
@@ -6,7 +6,7 @@
 <% include partials/loginbar %>
 <div class="container">
   <% include partials/message %>
-  <a class="button" href="/locations/5a69bb1475ca656d29a289d4"><i class="fa fa-arrow-left">&nbsp;</i>Truxtun Lake</a>
+  <a class="button" href="/locations/5a69bb1475ca656d29a289d4"><img src="/icons/arrow-left.svg" class="svg-icon-small">Truxtun Lake</a>
   <br>
   <br>
   <div class="box">
