--- a/views/locationselector.ejs
+++ b/views/locationselector.ejs
@@ -2,17 +2,17 @@
 <html>
 <head>
     <title>fishingBakersfield</title>
-<% include partials/header %>
-<% include partials/loginbar %>
+<%- include('partials/header') %>
+<%- include('partials/loginbar') %>
 <div class="container">
-<% include partials/message %>
+<%- include('partials/message') %>
 <div class="box">
   <div class="columns is-multiline">
-    <% location.forEach(function(location){ %>
+    <% locations.forEach(function(location){ %>
       <div class="column is-6">
         <a class="button selector-btn" href="locations/<%= location._id %>/catch/new"><img src="<%= location.thumbnail %>" class="button-img">&nbsp;<%= location.name %><img src="icons/arrow-right.svg" class="svg-icon-small"></a>
       </div>
     <% }) %>
   </div>
 </div>
-<% include partials/footer %>
+<%- include('partials/footer') %>
