--- a/views/truxtundepth.ejs
+++ b/views/truxtundepth.ejs
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>Truxtun Lake Depth - fishingBakersfield</title>
-<% include partials/header %>
-<% include partials/loginbar %>
+<%- include('partials/header') %>
+<%- include('partials/loginbar') %>
 <div class="container">
-  <% include partials/message %>
+  <%- include('partials/message') %>
   <a class="button" href="/locations/5a69bb1475ca656d29a289d4"><img src="/icons/arrow-left.svg" class="svg-icon-small">Truxtun Lake</a>
   <br>
   <br>
@@ -16,4 +16,4 @@
     </div>
   </div>
 </div>
-<% include partials/footer %>
+<%- include('partials/footer') %>
