--- a/views/location.ejs
+++ b/views/location.ejs
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title><%= location.name %> Fishing</title>
-    <% include partials/header %>
-    <% include partials/loginbar %>
+    <%- include('partials/header') %>
+    <%- include('partials/loginbar') %>
     <div class="container">
-      <% include partials/message %>
+      <%- include('partials/message') %>
       <!-- BACK BUTTON -->
       <a class="button" href="/"><img src="/icons/arrow-left.svg" class="svg-icon-small">
         All Locations
@@ -242,4 +242,4 @@
 	</div>
   </div>
 </div>
-<% include partials/footer %>
+<%- include('partials/footer') %>
