--- a/views/locationcatches.ejs
+++ b/views/locationcatches.ejs
@@ -5,10 +5,10 @@
 <html>
   <head>
     <title>Fish Caught At <%= posts[0].catchlocation %></title>
-    <% include partials/header %>
-    <% include partials/loginbar %>
+    <%- include('partials/header') %>
+    <%- include('partials/loginbar') %>
       <div class="container">
-        <% include partials/message %>
+        <%- include('partials/message') %>
         <a class="button" href="/locations/<%= posts[0].catchlocationid %>">
           <img src="/icons/arrow-left.svg" class="svg-icon-small"><%= posts[0].catchlocation %>
         </a>
@@ -67,7 +67,7 @@
                           <p style="color: black;"><img src="/icons/calendar.svg" style="margin-right: 2px;" class="svg-icon-small"><%= dateDiff(posts[i].createdAt, currentDate) %> days ago</p>
                         <% } %>
                         <br>
-	                      <% if(currentUser && posts[i].author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin) { %>
+	                      <%# if(currentUser && posts[i].author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin) { %>
                           <div style="text-align: center">
                             <a class="button is-small is-warning" href="/locations/<%= posts[i].catchlocationid %>/catch/<%= posts[i]._id %>/edit">
                               Edit
@@ -78,7 +78,7 @@
                               </button>
                             </form>
                           </div>
-                        <% } %>
+                        <%# } %>
                       </div>
                     </div>
 							      <footer class="card-footer">
@@ -140,5 +140,5 @@
           </nav>
       <% } %>
     </div>
-  <% include partials/footer %>
+  <%- include('partials/footer') %>
 <% } %>
