--- a/views/newcatch.ejs
+++ b/views/newcatch.ejs
@@ -2,13 +2,13 @@
 <html>
 <head>
     <title>Add New Catch</title>
-<% include partials/header %>
-<% include partials/loginbar %>
+<%- include('partials/header') %>
+<%- include('partials/loginbar') %>
 <div class="container">
 <a class="button" href="/addcatch"><img src="/icons/arrow-left.svg" class="svg-icon-small">Pick Location</a>
 <br>
 <br>
-<% include partials/message %>
+<%- include('partials/message') %>
 <div id="errorIMsg" style="display: none">
   <article class="message is-warning" id="delete" style="margin-bottom: 1rem;">
     <div class="message-header">
@@ -84,4 +84,4 @@ function checkForFile(){
 }
 }
 </script>
-<% include partials/footer %>
+<%- include('partials/footer') %>
